--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -26,30 +25,34 @@
         android:contentDescription="Globe Icon"
         android:layout_marginBottom="20dp" />
 
-    <!-- New Quiz Button -->
-    <Button
-        android:id="@+id/newQuiz"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="@android:color/white"
-        android:padding="12dp"
-        android:text="New Quiz"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+    <!-- Introductory Text -->
+    <TextView
+        android:layout_width="285dp"
+        android:layout_height="35dp"
+        android:gravity="center"
+        android:text="Test your knowledge of world countries!"
+        android:textColor="@android:color/white"
+        android:textSize="16sp" />
 
-    <!-- Past Results Button -->
-    <Button
-        android:id="@+id/pastResults"
-        android:layout_width="222dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="@android:color/white"
-        android:padding="12dp"
-        android:text="Past Results"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+    <TextView
+        android:layout_width="285dp"
+        android:layout_height="20dp"
+        android:layout_marginBottom="0dp"
+        android:gravity="center"
+        android:text="Michael Mandle and Will Cepress"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        android:textStyle="italic" />
 
+    <!-- Start Button -->
+    <Button
+        android:id="@+id/startButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start"
+        android:textSize="18sp"
+        android:padding="10dp"
+        android:backgroundTint="@android:color/white"
+        android:textColor="@android:color/black"
+        android:layout_marginTop="20dp" />
 </LinearLayout>
