--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -7,13 +7,13 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <ImageView
-        android:id="@+id/questionImage"
-        android:layout_width="238dp"
-        android:layout_height="232dp"
-        android:layout_marginBottom="16dp"
-        android:contentDescription="Question Image"
-        android:src="@drawable/usa" />
+<!--    <ImageView-->
+<!--        android:id="@+id/questionImage"-->
+<!--        android:layout_width="238dp"-->
+<!--        android:layout_height="232dp"-->
+<!--        android:layout_marginBottom="16dp"-->
+<!--        android:contentDescription="Question Image"-->
+<!--        android:src="@drawable/usa" />-->
 
     <TextView
         android:id="@+id/questionText"
